k8s/tracing/jaeger.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: tracing
spec:
  hosts:
  - jaeger.ecommerce.com
  gateways:
  - istio-system/ecommerce-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jaeger-query.tracing.svc.cluster.local
        port:
          number: 16686
